--- a/config/boards/shields/oh31/oh31.conf
+++ b/config/boards/shields/oh31/oh31.conf
@@ -2,4 +2,5 @@ CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_DISPLAY_INVERT=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
